[gd_scene load_steps=14 format=3 uid="uid://bgllp0nt3msp8"]

[ext_resource type="PackedScene" uid="uid://bcwkugn6v3oy7" path="res://addons/godot_state_charts/utilities/state_chart_debugger.tscn" id="1_c4q8c"]
[ext_resource type="Texture2D" uid="uid://dvj5eoskt1axu" path="res://icon.svg" id="1_wnpyn"]
[ext_resource type="Script" path="res://topic/watchman.gd" id="1_yifru"]
[ext_resource type="Script" path="res://topic/enemy.gd" id="2_q5xx5"]
[ext_resource type="Script" path="res://addons/godot_state_charts/state_chart.gd" id="3_eu3qk"]
[ext_resource type="Script" path="res://addons/godot_state_charts/compound_state.gd" id="4_4b84l"]
[ext_resource type="Script" path="res://addons/godot_state_charts/atomic_state.gd" id="5_ckbkw"]
[ext_resource type="Script" path="res://addons/godot_state_charts/parallel_state.gd" id="5_vmxqx"]
[ext_resource type="Script" path="res://addons/godot_state_charts/transition.gd" id="6_cuq0t"]
[ext_resource type="Script" path="res://addons/godot_state_charts/expression_guard.gd" id="9_aswp7"]
[ext_resource type="Script" path="res://topic/arrow.gd" id="11_aeqia"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ndhog"]
radius = 250.0

[sub_resource type="Resource" id="Resource_npwmk"]
script = ExtResource("9_aswp7")
expression = "3 <= enemy_entered_count"

[node name="StateChartEtude" type="Node2D"]

[node name="StateChartDebugger" parent="." instance=ExtResource("1_c4q8c")]
offset_left = 1420.0
offset_right = 1920.0
offset_bottom = 800.0
initial_node_to_watch = NodePath("../Watchman/StateChart")

[node name="Watchman" type="Node2D" parent="."]
position = Vector2(960, 540)
rotation = -1.5708
script = ExtResource("1_yifru")

[node name="Icon" type="Sprite2D" parent="Watchman"]
rotation = 1.5708
texture = ExtResource("1_wnpyn")

[node name="Area2D" type="Area2D" parent="Watchman"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Watchman/Area2D"]
shape = SubResource("CircleShape2D_ndhog")

[node name="StateChart" type="Node" parent="Watchman"]
script = ExtResource("3_eu3qk")

[node name="Root" type="Node" parent="Watchman/StateChart"]
script = ExtResource("5_vmxqx")

[node name="AlertState" type="Node" parent="Watchman/StateChart/Root"]
script = ExtResource("4_4b84l")
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="Watchman/StateChart/Root/AlertState"]
script = ExtResource("5_ckbkw")

[node name="To Observing" type="Node" parent="Watchman/StateChart/Root/AlertState/Idle"]
script = ExtResource("6_cuq0t")
to = NodePath("../../Observing")
event = &"enemy_entered"
delay_in_seconds = "0.0"

[node name="Observing" type="Node" parent="Watchman/StateChart/Root/AlertState"]
script = ExtResource("5_ckbkw")

[node name="To Idle" type="Node" parent="Watchman/StateChart/Root/AlertState/Observing"]
script = ExtResource("6_cuq0t")
to = NodePath("../../Idle")
event = &"enemy_exited"
delay_in_seconds = "3.0"

[node name="BerserkMode" type="Node" parent="Watchman/StateChart/Root"]
script = ExtResource("4_4b84l")
initial_state = NodePath("Normal")

[node name="Normal" type="Node" parent="Watchman/StateChart/Root/BerserkMode"]
script = ExtResource("5_ckbkw")

[node name="To Berserk" type="Node" parent="Watchman/StateChart/Root/BerserkMode/Normal"]
script = ExtResource("6_cuq0t")
to = NodePath("../../Berserk")
event = &"enemy_entered"
guard = SubResource("Resource_npwmk")
delay_in_seconds = "0.0"

[node name="Berserk" type="Node" parent="Watchman/StateChart/Root/BerserkMode"]
script = ExtResource("5_ckbkw")

[node name="To Normal" type="Node" parent="Watchman/StateChart/Root/BerserkMode/Berserk"]
script = ExtResource("6_cuq0t")
to = NodePath("../../Normal")
delay_in_seconds = "5.0"

[node name="Enemy" type="Node2D" parent="."]
position = Vector2(192, 108)
scale = Vector2(0.67, 0.67)
script = ExtResource("2_q5xx5")

[node name="Icon" type="Sprite2D" parent="Enemy"]
texture = ExtResource("1_wnpyn")

[node name="Area2D" type="Area2D" parent="Enemy"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enemy/Area2D"]
shape = SubResource("CircleShape2D_ndhog")

[node name="Arrow" type="Node2D" parent="."]
position = Vector2(960, 540)
script = ExtResource("11_aeqia")
fill_color = Color(0.4, 0.4, 0.4, 0.533333)

[connection signal="area_entered" from="Watchman/Area2D" to="Watchman" method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Watchman/Area2D" to="Watchman" method="_on_area_2d_area_exited"]
[connection signal="state_entered" from="Watchman/StateChart/Root/AlertState/Idle" to="Watchman" method="_on_idle_state_entered"]
[connection signal="state_processing" from="Watchman/StateChart/Root/AlertState/Observing" to="Watchman" method="_on_observing_state_processing"]
[connection signal="state_entered" from="Watchman/StateChart/Root/BerserkMode/Normal" to="Watchman" method="_on_normal_state_entered"]
[connection signal="state_entered" from="Watchman/StateChart/Root/BerserkMode/Berserk" to="Watchman" method="_on_berserk_state_entered"]
